--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/img/icon.jpeg" />
+    <link rel="icon" type="image/svg+xml" href="/img/icon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Pokedex</title>
   </head>
   <body>
     <div id="root"></div>
